--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -84,6 +84,42 @@
                 <source>meta.keywords</source>
                 <target>meta.keywords</target>
             </trans-unit>
+            <trans-unit id="2ffggs5a7f8ds9g3hj4cv1z5afg" resname="contact.tu.nombre">
+                <source>contact.tu.nombre</source>
+                <target>Your Name</target>
+            </trans-unit>
+            <trans-unit id="ffggs5a7f8ds9g3hj4cv1z5afg" resname="contact.ingrese.4.catacteres">
+                <source>contact.ingrese.4.catacteres</source>
+                <target>Please enter at least 4 chars</target>
+            </trans-unit>
+            <trans-unit id="fxxdvfggs5a7f8ds9g3hj4cv1z5afg" resname="contact.tu.email">
+                <source>contact.tu.email</source>
+                <target>Your Email</target>
+            </trans-unit>
+            <trans-unit id="xxdvfggs5a7f8ds9g3hj4cv1z5afg" resname="contact.entra.un.email.valido">
+                <source>contact.entra.un.email.valido</source>
+                <target>Please enter a valid email</target>
+            </trans-unit>
+            <trans-unit id="xsdvfggs5a7f8ds9g3hj4cv1z5afg" resname="contact.asunto">
+                <source>contact.asunto</source>
+                <target>Subject</target>
+            </trans-unit>
+            <trans-unit id="x1vfggs5a7f8ds9g3hj4cv1z5afg" resname="contact.asunto.ingrese.8.caracteres">
+                <source>contact.asunto.ingrese.8.caracteres</source>
+                <target>Please enter at least 8 chars of subject</target>
+            </trans-unit>
+            <trans-unit id="x1dfggs5a7f8ds9g3hj4cv1z5afg" resname="contact.mensaje.texto">
+                <source>contact.mensaje.texto</source>
+                <target>Message</target>
+            </trans-unit>
+            <trans-unit id="x1gfggs5a7f8ds9g3hj4cv1z5afg" resname="contact.escriba.algo.para.nosotros">
+                <source>contact.escriba.algo.para.nosotros</source>
+                <target>Please write something for us</target>
+            </trans-unit>
+            <trans-unit id="x1gfggs5anf8ds9g3hj4cv1z5afg" resname="contact.enviar.mensaje">
+                <source>contact.enviar.mensaje</source>
+                <target>Send Message</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
