--- a/src/AV/FrontendBundle/Resources/translations/messages.en.xlf
+++ b/src/AV/FrontendBundle/Resources/translations/messages.en.xlf
@@ -21,6 +21,18 @@
         <source>f.suscribirse.subtitulo</source>
         <target>Subscribe to our news list</target>
       </trans-unit>
+      <trans-unit id="Ya8s47dfg15a6q2va3Aa5f1" resname="f.newsletter">
+        <source>f.newsletter</source>
+        <target>Newsletter</target>
+      </trans-unit>
+      <trans-unit id="Ya5878s47dfg15a6q2va3Aa5f1" resname="f.nuestro.ministerio">
+        <source>f.nuestro.ministerio</source>
+        <target>Our ministry</target>
+      </trans-unit>
+      <trans-unit id="Ya5878s47dfa6q2va3Aa5f1" resname="f.imagenes.direccion">
+        <source>f.imagenes.direccion</source>
+        <target>Images and address of the residence of our ministry</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
