--- a/src/AV/FrontendBundle/Resources/translations/messages.es.xlf
+++ b/src/AV/FrontendBundle/Resources/translations/messages.es.xlf
@@ -21,6 +21,18 @@
         <source>f.suscribirse.subtitulo</source>
         <target>Suscríbete a nuestra lista de noticias</target>
       </trans-unit>
+      <trans-unit id="Ya8s47dfg15a6q2va3Aa5f1" resname="f.newsletter">
+        <source>f.newsletter</source>
+        <target>Lista de noticias</target>
+      </trans-unit>
+      <trans-unit id="Ya5878s47dfg15a6q2va3Aa5f1" resname="f.nuestro.ministerio">
+        <source>f.nuestro.ministerio</source>
+        <target>Nuestro ministerio</target>
+      </trans-unit>
+      <trans-unit id="Ya5878s47dfa6q2va3Aa5f1" resname="f.imagenes.direccion">
+        <source>f.imagenes.direccion</source>
+        <target>Imágenes y dirección de la residencia de nuestro ministerio</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
