add pages of service...

--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -156,6 +156,26 @@
                 <source>nav.donaciones</source>
                 <target>Donations</target>
             </trans-unit>
+            <trans-unit id="Ya5847dfa6q2va3Aa5f1" resname="f.acerca.del.evento">
+                <source>f.acerca.del.evento</source>
+                <target>About The Evento</target>
+            </trans-unit>
+            <trans-unit id="Ya547dfa6q2va3Aa5f1" resname="f.donde">
+                <source>f.donde</source>
+                <target>Where?</target>
+            </trans-unit>
+            <trans-unit id="Ya7dfa6q2va3Aa5f1" resname="f.cuando">
+                <source>f.cuando</source>
+                <target>When?</target>
+            </trans-unit>
+            <trans-unit id="Ya7dfa6q2a3Aa5f1" resname="f.inicia">
+                <source>f.inicia</source>
+                <target>Start</target>
+            </trans-unit>
+            <trans-unit id="Ya7dfa6q23Aa5f1" resname="f.termina">
+                <source>f.termina</source>
+                <target>End</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
