--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -158,7 +158,7 @@
             </trans-unit>
             <trans-unit id="Ya5847dfa6q2va3Aa5f1" resname="f.acerca.del.evento">
                 <source>f.acerca.del.evento</source>
-                <target>About The Evento</target>
+                <target>About The Event</target>
             </trans-unit>
             <trans-unit id="Ya547dfa6q2va3Aa5f1" resname="f.donde">
                 <source>f.donde</source>
@@ -175,6 +175,10 @@
             <trans-unit id="Ya7dfa6q23Aa5f1" resname="f.termina">
                 <source>f.termina</source>
                 <target>End</target>
+            </trans-unit>
+            <trans-unit id="Yadfa6q23Aa5f1" resname="f.otros.enalces">
+                <source>f.otros.enalces</source>
+                <target>Useful links</target>
             </trans-unit>
         </body>
     </file>
